# api/routes/user.route.js
@@ -1,8 +1,9 @@
 import express from 'express';
 import { deleteUser } from '../controller/user.controller.js';
+import { verifyToken } from '../middleware/jwt.js';
 
 const router = express.Router();
 
-router.get('/test', deleteUser);
+router.delete('/:id', verifyToken, deleteUser);
 
 export default router;
