# api/swagger/swagger.yaml
@@ -132,3 +132,31 @@ paths:
           description: Unauthorized
         '500':
           description: Internal Server Error
+  /user/{id}:
+    delete:
+      summary: Delete a user
+      tags:
+        - User
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: User deleted successfully
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
